fix(docs): align navbar items vertically without changing search styles

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -357,17 +357,11 @@ div[class^="sidebar_"] .menu__link.menu__link--active {
 }
 
 /* Search */
-.DocSearch-Button {
-  height: 36px;
-  font-size: 0.875rem;
-  border-radius: 12px;
-}
-.navbar__inner {
-  padding-left: 24px;
-  padding-right: 24px;
-}
-.navbar__item:hover {
-  background-color: rgba(255, 145, 77, 0.08);
+.navbar__items--right {
+  @apply justify-end ml-auto flex-row-reverse;
+  gap: 13px;
+  align-items: center;
+  padding: 9px 0;
 }
 
 .button.button--secondary.button--outline:not(.button--active):not(:hover) {
@@ -880,5 +874,3 @@ textarea {
 .theme-back-to-top-button:hover {
   background-color: #e67643 !important;
 }
-
-
